--- a/package.json
+++ b/package.json
@@ -11,13 +11,32 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.2.3",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/localize": "^14.0.0",
+    "@angular/material": "^14.2.3",
+    "@angular/material-moment-adapter": "14.2.3",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@progress/kendo-angular-charts": "^7.2.0",
+    "@progress/kendo-angular-common": "^3.0.0",
+    "@progress/kendo-angular-dropdowns": "latest",
+    "@progress/kendo-angular-inputs": "latest",
+    "@progress/kendo-angular-intl": "^4.0.0",
+    "@progress/kendo-angular-l10n": "^4.0.0",
+    "@progress/kendo-angular-label": "latest",
+    "@progress/kendo-angular-menu": "^4.0.1",
+    "@progress/kendo-angular-popup": "^5.0.0",
+    "@progress/kendo-angular-treeview": "latest",
+    "@progress/kendo-drawing": "^1.1.2",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "^5.0.0",
+    "@progress/kendo-angular-treelist": "latest",
+    "hammerjs": "^2.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
